# news2img

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
assets/checkpoints/: .gitignore  download.sh
assets/configs/: yolov8s.yaml
docs/: .gitignore  DEVELOPMENT.md  conf.py  index.rst
docs/assets/images/: .gitignore  flow.drawio
docs/src/: index.rst  mindyolo.md
news2img/: __main__.py  device.py  draw.py  main.py  mood.py  news.py  utils.py
tests/: test_mood_detection.py
